account signup and login working

--- a/AWS/django-app/templates/dashboard.html
+++ b/AWS/django-app/templates/dashboard.html
@@ -64,9 +64,9 @@
 												</a>
 
 												<ul class="dropdown-menu">
-													<li><a href="/filter_raw_data/all">All</a></li>
-													<li><a href="/filter_raw_data/ST102">ST102</a></li>
-													<li><a href="/filter_raw_data/ST105">ST105</a></li>
+													<li><a href="/filter_data/all">All</a></li>
+													<li><a href="/filter_data/ST102">ST102</a></li>
+													<li><a href="/filter_data/ST105">ST105</a></li>
 												</ul>
 											</li>
 
@@ -76,12 +76,12 @@
 												</a>
 
 												<ul class="dropdown-menu">
-													<li><a href="/filter_raw_data_time/1">Last 1 m</a></li>
-													<li><a href="/filter_raw_data_time/2">Last 15 m</a></li>
-													<li><a href="/filter_raw_data_time/3">Last 1 hr</a></li>
-													<li><a href="/filter_raw_data_time/4">Last 6 hrs</a></li>
-													<li><a href="/filter_raw_data_time/5">Last 12 hrs</a></li>
-													<li><a href="/filter_raw_data_time/6">Lasr 24 hrs</a></li>													
+													<li><a href="/filter_data_time/1">Last 1 m</a></li>
+													<li><a href="/filter_data_time/2">Last 15 m</a></li>
+													<li><a href="/filter_data_time/3">Last 1 hr</a></li>
+													<li><a href="/filter_data_time/4">Last 6 hrs</a></li>
+													<li><a href="/filter_data_time/5">Last 12 hrs</a></li>
+													<li><a href="/filter_data_time/6">Lasr 24 hrs</a></li>													
 												</ul>
 											</li>
 
