--- a/AWS/django-app/templates/confirmemail.html
+++ b/AWS/django-app/templates/confirmemail.html
@@ -2,15 +2,21 @@
 <html lang="en" class="no-js">
 <!-- HEAD -->
 <head>
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Photo Gallery</title>
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href='https://fonts.googleapis.com/css?family=Roboto:100,400,700,500,300,300italic' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="assets/css/global.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="assets/plugins/jquery.min.js"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Sensing the Subnivean</title>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,400,700,500,300,300italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="/static/assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/assets/plugins/et-line/et-line.css" rel="stylesheet" type="text/css" />
+    <link href="/static/assets/plugins/themify/themify.css" rel="stylesheet" type="text/css" />
+    <link href="/static/assets/plugins/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/assets/css/global.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
+    <link href="/static/assets/css/cards-gallery.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="/static/assets/plugins/jquery.min.js"></script>
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
@@ -23,7 +29,7 @@
     <!--========== BACKGROUND COLOR SKY LIGHT ==========-->
     <div class="bg-color-sky-light">
         <br>
-   <center><h2>Photo Gallery</h2>
+   <center><h2>Subnivean Data</h2>
     <div id="confirmemail-message"></div>
     <div id="confirmemail-message-action"></div>
     </center>
@@ -36,22 +42,12 @@
                         <!-- Blog Grid Content -->
                         <div class="blog-grid-content">
                             <h2 class="blog-grid-title-lg">Confirm Email</h2>
-<form  method='post' action="/confirm-email" id="confirmemail-form">
-                           
-                          
-                            <input type="text" name="username" id="username" class="form-control" placeholder="Enter username">
-<br>
-                        
-                            <input type="text" name="code" id="code" class="form-control" placeholder="Enter confirmation code" >
-                            <br>
-                            <button type="submit" class="btn-base-bg btn-base-sm radius-3" >
-                                Submit</button>
-                            </form>
+                            <br> Check email for link to confirmation
                         </div>
                         <!-- End Blog Grid Content -->
                     </article>
                     <!-- End Blog Grid -->
-                     <a href="login.html">Login</a> |  <a href="signup.html">Signup</a>
+                     <a href="/login">Login</a> |  <a href="/signup">Signup</a>
                 </div>
 
                
@@ -67,9 +63,10 @@
 </div>
 <!-- END WRAPPER -->
 
-<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/scripts/app.js"></script>
-<script type="text/javascript" src="assets/process.js"></script>
+<script type="text/javascript" src="/static/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/static/assets/plugins/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
+<script type="text/javascript" src="/static/assets/scripts/app.js"></script>
+<script type="text/javascript" src="/static/assets/scripts/portfolio/portfolio-4-col-grid.js"></script>
 </body>
 <!-- END BODY -->
 
