--- a/AWS/django-app/templates/login.html
+++ b/AWS/django-app/templates/login.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Photo Gallery</title>
+<title>Sensing the Subnivean</title>
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href='https://fonts.googleapis.com/css?family=Roboto:100,400,700,500,300,300italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -36,7 +36,7 @@
                         <!-- Blog Grid Content -->
                         <div class="blog-grid-content">
                             <h2 class="blog-grid-title-lg">Login</h2>
-                            <form id="loginform" method='post' action="/login/"> {% csrf_token %}
+                            <form id="loginform" method='POST' action="/login/"> {% csrf_token %}
                                 <input type="text" name="username" id="username" class="form-control" placeholder="Enter username">
                                 <br>
                                 <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" >
