--- a/AWS/django-app/templates/newpassword.html
+++ b/AWS/django-app/templates/newpassword.html
@@ -23,7 +23,7 @@
     <!--========== BACKGROUND COLOR SKY LIGHT ==========-->
     <div class="bg-color-sky-light">
         <br>
-        <center><h2>Subnivean Data</h2></center>
+    <center><h2>Subnivean Data</h2></center>
         <!--========== PAGE CONTENT ==========-->
         <div class="content-sm container">
             <div class="row">
@@ -32,11 +32,15 @@
                     <article class="blog-grid margin-b-30">
                         <!-- Blog Grid Content -->
                         <div class="blog-grid-content">
-                            <h2 class="blog-grid-title-lg">Forgot Password</h2>
-                            <form  method='POST' id="forgotpasswordform"> {% csrf_token %}
-                            <input type="text" name="email" id="email" class="form-control" placeholder="Enter email">
-                            <br>
-                            <button type="submit" class="btn-base-bg btn-base-sm radius-3">Submit</button>
+                            <h2 class="blog-grid-title-lg">Reset Password</h2>
+                            <form  method='post' action="/np/"> {% csrf_token %}  
+                                <input type="username" name="token" id="token" class="form-control" placeholder="Enter confirmation key" >
+                                <br>
+                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter new password" >
+                                <br>
+                                <input type="password" name="password1" id="password1" class="form-control" placeholder="Repeat new password" >
+                                <br>
+                                <button type="submit" class="btn-base-bg btn-base-sm radius-3">Submit</button>
                             </form>
                         </div>
                         <!-- End Blog Grid Content -->
@@ -50,7 +54,6 @@
             <!--// end row -->
         </div>
         <!--========== END PAGE CONTENT ==========-->
-
 
     </div>
     <!--========== END BACKGROUND COLOR SKY LIGHT ==========-->
