mqtt works on arduino

--- a/AWS/django-app/templates/dashboard.html
+++ b/AWS/django-app/templates/dashboard.html
@@ -135,10 +135,10 @@
 									<td>{{item.timestamp}}</td>									
 									<td>{{item.data.latitude}}</td>
 									<td>{{item.data.longitude}}</td>
-									<td>{{item.data.amb_temp}}</td>
-									<td>{{item.data.amb_hum}}</td>	
-									<td>{{item.data.snow_temp}}</td>	
-									<td>{{item.data.snow_depth}}</td>	
+									<td>{{item.data.ambTemp}}</td>
+									<td>{{item.data.ambHum}}</td>	
+									<td>{{item.data.snowTemp}}</td>	
+									<td>{{item.data.snowDepth}}</td>	
 								</tr>
 								{% endfor %}
 							</tbody>
