implement change password, display user information in navbar

--- a/AWS/django-app/templates/changepassword.html
+++ b/AWS/django-app/templates/changepassword.html
@@ -32,10 +32,8 @@
                     <article class="blog-grid margin-b-30">
                         <!-- Blog Grid Content -->
                         <div class="blog-grid-content">
-                            <h2 class="blog-grid-title-lg">Reset Password</h2>
-                            <form  method='post' action="/np/"> {% csrf_token %}  
-                                <input type="password" name="token" id="token" class="form-control" placeholder="Enter confirmation key" >
-                                <br>
+                            <h2 class="blog-grid-title-lg">Change Password</h2>
+                            <form  method='post' action="/cp/"> {% csrf_token %}  
                                 <input type="password" name="password" id="password" class="form-control" placeholder="Enter new password" >
                                 <br>
                                 <input type="password" name="password1" id="password1" class="form-control" placeholder="Repeat new password" >
@@ -46,7 +44,6 @@
                         <!-- End Blog Grid Content -->
                     </article>
                     <!-- End Blog Grid -->
-                     <a href="/login">Login</a> |  <a href="/signup">Signup</a>
                 </div>
 
                
