update filtering, downloading filtered results

--- a/AWS/django-app/templates/changepassword.html
+++ b/AWS/django-app/templates/changepassword.html
@@ -44,6 +44,7 @@
                         <!-- End Blog Grid Content -->
                     </article>
                     <!-- End Blog Grid -->
+                     <a href="/">Cancel</a>
                 </div>
 
                
