--- a/AWS/django-app/templates/dashboard.html
+++ b/AWS/django-app/templates/dashboard.html
@@ -64,7 +64,10 @@
 													<li><a href="/filter_data_time/3">Last 1 hr</a></li>
 													<li><a href="/filter_data_time/4">Last 6 hrs</a></li>
 													<li><a href="/filter_data_time/5">Last 12 hrs</a></li>
-													<li><a href="/filter_data_time/6">Lasr 24 hrs</a></li>													
+													<li><a href="/filter_data_time/6">Last 24 hrs</a></li>
+													<li><a href="/filter_data_time/7">Last 48 hrs</a></li>
+													<li><a href="/filter_data_time/8">Last 72 hrs</a></li>
+													<li><a href="/filter_data_time/9">Last week</a></li>											
 												</ul>
 											</li>
 										</ul>
@@ -117,7 +120,7 @@
 					</div>
 					<!-- /basic datatable -->
 					
-					<h3><a href="/download" download> Download CSV </a></h3>
+					<h3><a href="/download/{{time_filter}}" download> Download CSV </a></h3>
 
 
 				<!-- /detached content -->
