--- a/AWS/django-app/templates/forgotpassword.html
+++ b/AWS/django-app/templates/forgotpassword.html
@@ -34,7 +34,7 @@
                         <div class="blog-grid-content">
                             <h2 class="blog-grid-title-lg">Forgot Password</h2>
                             <form  method='POST' id="forgotpasswordform"> {% csrf_token %}
-                            <input type="text" name="email" id="email" class="form-control" placeholder="Enter email">
+                            <input type="text" name="email" id="email" class="form-control" placeholder="Enter email" required>
                             <br>
                             <button type="submit" class="btn-base-bg btn-base-sm radius-3">Submit</button>
                             </form>
