--- a/AWS/django-app/templates/login.html
+++ b/AWS/django-app/templates/login.html
@@ -37,9 +37,9 @@
                         <div class="blog-grid-content">
                             <h2 class="blog-grid-title-lg">Login</h2>
                             <form id="loginform" method='POST' action="/login/"> {% csrf_token %}
-                                <input type="text" name="username" id="username" class="form-control" placeholder="Enter username">
+                                <input type="text" name="username" id="username" class="form-control" placeholder="Enter username" required>
                                 <br>
-                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" >
+                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" required>
                                 <br>
                                 <button type="submit" class="btn-base-bg btn-base-sm radius-3" >Login</button>
                             </form>
