--- a/AWS/django-app/templates/newpassword.html
+++ b/AWS/django-app/templates/newpassword.html
@@ -34,11 +34,11 @@
                         <div class="blog-grid-content">
                             <h2 class="blog-grid-title-lg">Reset Password</h2>
                             <form  method='post' action="/np/"> {% csrf_token %}  
-                                <input type="password" name="token" id="token" class="form-control" placeholder="Enter confirmation key" >
+                                <input type="password" name="token" id="token" class="form-control" placeholder="Enter confirmation key" required autocomplete="off">
                                 <br>
-                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter new password" >
+                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter new password" required>
                                 <br>
-                                <input type="password" name="password1" id="password1" class="form-control" placeholder="Repeat new password" >
+                                <input type="password" name="password1" id="password1" class="form-control" placeholder="Repeat new password" required>
                                 <br>
                                 <button type="submit" class="btn-base-bg btn-base-sm radius-3">Submit</button>
                             </form>
