--- a/AWS/django-app/templates/signup.html
+++ b/AWS/django-app/templates/signup.html
@@ -42,15 +42,15 @@
                         <div class="blog-grid-content">
                             <h2 class="blog-grid-title-lg">Signup</h2>
                             <form  action='/signup/' id="signupform" method='POST'>{% csrf_token %}
-                                <input type="text" name="username" id="username" class="form-control" placeholder="Enter username"/>
+                                <input type="text" name="username" id="username" class="form-control" placeholder="Enter username" required/>
                                 <br>
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Enter full name"/>
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Enter full name" required/>
                                 <br>
-                                <input type="email" name="email" id="email" class="form-control" placeholder="Enter email"/>
+                                <input type="email" name="email" id="email" class="form-control" placeholder="Enter email" required/>
                                 <br>
-                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" />
+                                <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" required/>
                                 <br>
-                                <input type="password" name="password1" id="password1" class="form-control" placeholder="Repeat password" />
+                                <input type="password" name="password1" id="password1" class="form-control" placeholder="Repeat password" required/>
                                 <br>
                                 <button type="submit" class="btn-base-bg btn-base-sm radius-3" >Signup</button>
                             </form>
