--- a/AWS/django-app/templates/changepassword.html
+++ b/AWS/django-app/templates/changepassword.html
@@ -24,6 +24,9 @@
     <div class="bg-color-sky-light">
         <br>
     <center><h2>Subnivean Data</h2></center>
+    {% if error_msg != '' %}
+    <center><div class="error"> {{error_msg}}</div></center>
+    {% endif %}
         <!--========== PAGE CONTENT ==========-->
         <div class="content-sm container">
             <div class="row">
