--- a/AWS/django-app/templates/signup.html
+++ b/AWS/django-app/templates/signup.html
@@ -32,6 +32,9 @@
     <div id="message"></div>
     <div id="messageaction"></div>
     </center>
+    {% if error_msg != '' %}
+    <center><div class="error"> {{error_msg}}</div></center>
+    {% endif %}
         <!--========== PAGE CONTENT ==========-->
         <div class="content-sm container">
             <div class="row">
