--- a/AWS/django-app/templates/forgotpassword.html
+++ b/AWS/django-app/templates/forgotpassword.html
@@ -18,12 +18,13 @@
 
 <!-- WRAPPER -->
 <div class="wrapper">
-    
-    
     <!--========== BACKGROUND COLOR SKY LIGHT ==========-->
     <div class="bg-color-sky-light">
         <br>
         <center><h2>Subnivean Data</h2></center>
+        {% if error_msg != '' %}
+        <center><div class="error"> {{error_msg}}</div></center>
+        {% endif %}
         <!--========== PAGE CONTENT ==========-->
         <div class="content-sm container">
             <div class="row">
