clean up django, change arduino code to work on esp32

--- a/AWS/django-app/templates/dashboard.html
+++ b/AWS/django-app/templates/dashboard.html
@@ -98,7 +98,7 @@
 								<tr>
 									<th>Station ID</th>
 									<th>Timestamp</th>
-									<th>Date and Time</th>
+									<th>Date and Time (GMT)</th>
 									<th>Ambient Temperature</th>
 									<th>Ambient Humidity</th>
 									<th>Snow Temperature</th>									
